// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Workspace Menu has groups with screens 1`] = `
<nav
  className="grommetux-box grommetux-box--direction-column grommetux-box--justify-between grommetux-box--align-start grommetux-box--responsive grommetux-box--pad-none grommetux-menu grommetux-menu--column grommetux-menu--primary grommetux-menu--inline"
  id={undefined}
  onClick={undefined}
  role={undefined}
  style={Object {}}
  tabIndex={undefined}
>
  <div
    className="grommetux-box grommetux-box--direction-column grommetux-box--responsive grommetux-box--pad-none grommetux-box--flex-off"
    id={undefined}
    onClick={undefined}
    role={undefined}
    style={Object {}}
    tabIndex={undefined}
  >
    <header
      className="grommetux-box grommetux-box--direction-row grommetux-box--align-end grommetux-box--pad-horizontal-medium grommetux-header"
      id={undefined}
      onClick={undefined}
      role={undefined}
      style={Object {}}
      tabIndex={undefined}
    >
      <h4
        className="grommetux-heading grommetux-heading--strong"
      >
        Settings
        <i
          className="icon icon-wrench"
          onClick={undefined}
          style={undefined}
        />
      </h4>
    </header>
  </div>
  <a
    aria-label={undefined}
    className="grommetux-anchor"
    href={undefined}
    onClick={[Function]}
  >
    User Management
    <i
      className="icon icon-group"
      onClick={undefined}
      style={undefined}
    />
  </a>
  <a
    aria-label={undefined}
    className="grommetux-anchor"
    href={undefined}
    onClick={[Function]}
  >
    System Settings
    <i
      className="icon icon-cogs"
      onClick={undefined}
      style={undefined}
    />
  </a>
  <a
    aria-label={undefined}
    className="grommetux-anchor"
    href={undefined}
    onClick={[Function]}
  >
    title
    <i
      className="icon icon-red"
      onClick={undefined}
      style={undefined}
    />
  </a>
</nav>
`;

exports[`Workspace Menu has renders menu options 1`] = `
<a
  aria-label={undefined}
  className="grommetux-anchor"
  href={undefined}
  onClick={[Function]}
>
  title
  <i
    className="icon icon-red"
    onClick={undefined}
    style={undefined}
  />
</a>
`;
